[gd_scene load_steps=5 format=3 uid="uid://0xontrpulfdl"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="PackedScene" uid="uid://3vuxif7v1mhi" path="res://objects/blaster_h_2.tscn" id="2_g2els"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g2els"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3vyb7"]
height = 1.25

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_3vyb7")

[node name="StandingCollisionShape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_g2els")

[node name="CrouchingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.375, 0)
shape = SubResource("CapsuleShape3D_3vyb7")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="Hand" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, -0.2, -0.5)

[node name="blaster-h3" parent="Head/Hand" instance=ExtResource("2_g2els")]

[node name="CrouchRaycast" type="RayCast3D" parent="."]
target_position = Vector3(0, 1, 0)

[node name="LedgeRaycasts" type="Node3D" parent="."]

[node name="FrontFace" type="RayCast3D" parent="LedgeRaycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, 0)
target_position = Vector3(0, 0, -0.6)

[node name="HighLedge" type="RayCast3D" parent="LedgeRaycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
target_position = Vector3(0, 0, -0.6)

[node name="TopOfLedge" type="RayCast3D" parent="LedgeRaycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0, -1)
